feat(): countries endpoint and test
