# src/main/java/com/gersimuca/erp/common/exception/EntityAlreadyExistsException.java
@@ -2,20 +2,23 @@ package com.gersimuca.erp.common.exception;
 
 import static java.lang.String.format;
 
+import com.gersimuca.erp.model.ErrorCode;
 import org.springframework.http.HttpStatus;
 
 public class EntityAlreadyExistsException extends BaseException {
-  public EntityAlreadyExistsException(Class<?> entityClass, Long id) {
+  public EntityAlreadyExistsException(final Class<?> entityClass, final Long id) {
     super(
         format("%s with id %d already exists", entityClass.getSimpleName(), id),
         HttpStatus.CONFLICT,
-        ErrorSeverity.WARN);
+        ErrorSeverity.WARN,
+        ErrorCode.CONFLICT);
   }
 
-  public EntityAlreadyExistsException(Class<?> entityClass, String property) {
+  public EntityAlreadyExistsException(final Class<?> entityClass, final String property) {
     super(
         format("%s already exists (%s)", entityClass, property),
         HttpStatus.CONFLICT,
-        ErrorSeverity.WARN);
+        ErrorSeverity.WARN,
+        ErrorCode.CONFLICT);
   }
 }
